--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ lang="es">
     <div class="page" id="p2"><div class="card"><img src="img/amor2.jpeg" class="img-frame" alt="Foto 2"><span class="frase">"El partido más importante ya lo gané el día que te pusiste mi misma camiseta."</span><button class="btn-next" onclick="irA(3)">Seguir 💙</button></div></div>
     <div class="page" id="p3"><div class="card"><img src="img/amor3.jpeg" class="img-frame" alt="Foto 3"><span class="frase">"Gracias por tanto amor y paciencia."</span><button class="btn-next" onclick="irA(4)">Continuar ✨</button></div></div>
     <div class="page" id="p4"><div class="card"><img src="img/amor4.jpeg" class="img-frame" alt="Foto 4"><span class="frase">"Contigo las celebraciones por fin tienen sentido."</span><button class="btn-next" onclick="irA(5)">Avanzar 🌹</button></div></div>
-    <div class="page" id="p5"><div class="card"><img src="img/amor5.jpeg" class="img-frame" alt="Foto 5"><span class="frase">"Caminando por Pueblos Mágicos entendí que la verdadera magia no son los lugares, sino ser la primera persona con la que decido compartir mi tiempo en serio."</span><button class="btn-next" onclick="irA(6)">Ver más 👀</button></div></div>
+    <div class="page" id="p5"><div class="card"><img src="img/amor5.jpeg" class="img-frame" alt="Foto 5"><span class="frase">"Caminando por Pueblos Mágicos entendí que la verdadera magia no son los lugares, sino ser la persona con la que decido compartir mi tiempo."</span><button class="btn-next" onclick="irA(6)">Ver más 👀</button></div></div>
     <div class="page" id="p6"><div class="card"><img src="img/amor6.jpeg" class="img-frame" alt="Foto 6"><span class="frase">"Caminamos por pueblitos mágicos, pero mi lugar favorito siempre será donde estés tú."</span><button class="btn-next" onclick="irA(7)">Seguir 🥰</button></div></div>
     <div class="page" id="p7"><div class="card"><img src="img/amor7.jpeg" class="img-frame" alt="Foto 7"><span class="frase">"Por mil aventuras más a tu lado."</span><button class="btn-next" onclick="irA(8)">Ya casi... 💖</button></div></div>
     <div class="page" id="p8"><div class="card"><img src="img/amor8.jpeg" class="img-frame" alt="Foto 8"><span class="frase">"Eres el mejor regalo de la vida."</span><button class="btn-next" onclick="irA(9)">Siguiente 🎀</button></div></div>
@@ -134,7 +134,7 @@ lang="es">
         </div>
         <div class="card" id="final-card">
             <img src="img/amor10.jpeg" class="img-frame" alt="Foto Final">
-            <span class="frase">"Mi mundo era uno antes de ti y es otro mucho mejor contigo. Te amo con una fuerza que no sabía que existía. Feliz Primer San Valentin Juntos, que sean muchisimos más"</span>
+            <span class="frase">"Mi mundo era uno antes de ti y es otro mucho mejor contigo. Te amo con una fuerza que no sabía que existía."</span>
             <button class="btn-next" onclick="celebrar()">¡Nuestra Sorpresa! 🎆</button>
         </div>
     </div>
